# JobBus

./: .gitignore  INSTALL.md  JobBus_App_Store.provisionprofile  LICENSE  PRIVACY.md  Package.swift  README.md  RULES.md  developerID_application.cer  mac_app.cer  mac_installer.cer
backend/: .env.example  .gitignore  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: auth_middleware.py
backend/migrations/: 001_initial.sql  002_add_provider_columns.sql  002_provider_columns.sql  003_opportunities_unique_job_url.sql  004_opportunities_search_query.sql  005_quota_cache_columns.sql
backend/models/: __init__.py  enums.py  schemas.py
backend/providers/: __init__.py
backend/routers/: admin.py  auth.py  campaigns.py  contacts.py  opportunities.py  resume.py  settings.py
backend/scripts/: test_provider_endpoints.py
backend/services/: admin_service.py  auth_service.py  campaign_engine.py  credential_service.py  email_writer.py  follow_up_generator.py  followup_scheduler.py  guidance_engine.py  opportunity_scorer.py  outreach_angle.py  quality_scorer.py  resume_analyzer.py  signal_collectors.py  smtp_sender.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_audit_fixes.py  test_auth.py  test_campaign_engine.py  test_campaign_workflow.py  test_contacts_router.py  test_email_writer.py  test_follow_up_generator.py  test_guidance_engine.py  test_new_features.py  test_onboarding.py  test_opportunity_scorer.py  test_outreach_angle.py  test_providers.py  test_quality_scorer.py  test_resume_analyzer.py  test_smtp_sender.py  (+2 more)
(+86 files in other folders)
