[project]
name = "jobbus-backend"
version = "0.1.0"
description = "JobBus — Intelligent Career Outreach System (Backend)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.24",
    "supabase>=2.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "pypdf>=3.0",
    "python-docx>=0.8",
    "google-generativeai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that require real API calls",
    "integration: marks integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
